k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: chat-app
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: chatapp-mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          # resources:
          #   requests:
          #     memory: "256Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "512Mi"
          #     cpu: "500m"
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
