k8s/backend-service.yml
# this service is important ,without it the frontend deployment won't work
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port : 5001
      targetPort: 5001
