k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: chat-app
  labels:
    app: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  type: ClusterIP
